# sshield

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  home-manager.nix
src/: cli.rs  config.rs  db.rs  gui.rs  input.rs  main.rs  socket.rs
