[package]
name = "sshield"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.72"
chrono = "0.4.31"
clap = { version = "4.3.17", features = [ "derive" ] }
dialog = "0.3.0"
dirs = "5.0.1"
extrasafe = { git = "https://github.com/boustrophedon/extrasafe" }
futures = "0.3.28"
rusqlite = { version = "0.29.0", features = ["sqlcipher"] }
russh = { git = "https://github.com/warp-tech/russh" , features = ["openssl"], rev = "8c8b064676860640e5ef1dd9cf2403d2266cd152" }
russh-keys = { git = "https://github.com/warp-tech/russh" , features = ["openssl"] , rev = "8c8b064676860640e5ef1dd9cf2403d2266cd152" }
ssh2-config = "0.2.0"
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = "0.1.14"
toml = "0.7.6"
